syntax = "proto3";

package rivet.backend.pkg.team.msg.user_ban;

import "resources/legacy/proto/common.proto";

/// name = "msg-team-user-ban"
/// parameters = [
/// 	{ name = "team_id" },
/// 	{ name = "user_id" },
/// ]
message Message {
	rivet.common.Uuid team_id = 1;
	rivet.common.Uuid user_id = 2;
	rivet.common.Uuid banner_user_id = 3;
}

